Closed Bug 570555 Opened 14 years ago Closed 14 years ago

CSS animation on font-size should not require units

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: longsonr, Assigned: longsonr)

References

Details

Attachments

(1 file)

Depends on: 556404
Attachment #449688 - Flags: superreview?(roc)
Attachment #449688 - Flags: review?(dholbert)
Attachment #449688 - Attachment is patch: true
Assignee: nobody → longsonr
Blocks: svg11tests
Attachment #449688 - Flags: superreview?(roc) → superreview+
I posted a response to that thread:
http://lists.w3.org/Archives/Public/www-svg/2010Jun/0102.html

At this point, based on my reading of the relevant specs, I don't think we should make this change.  I think our current behavior[1] is the most sane of the various options.

[1] To be clear, our current behavior is: accept unitless <length> values for attributeType="XML" animations, but reject unitless <length> values for attributeType="CSS" animations. (and for attributeType="auto", follow the rules for CSS vs XML depending on which bucket "auto" falls into for the attributeName in question)
(though I'm willing to be convinced that I'm wrong)
Comment on attachment 449688 [details] [diff] [review]
patch

And I've been convinced, per the second half of http://lists.w3.org/Archives/Public/www-svg/2010Jun/0114.html

r=dholbert
Attachment #449688 - Flags: review?(dholbert) → review+
pushed http://hg.mozilla.org/mozilla-central/rev/e63754724e81
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: