Bug 570555 - CSS animation on font-size should not require units. r=dholbert,sr=roc